[gd_scene load_steps=5 format=3 uid="uid://dvd31dx5nr2u2"]

[ext_resource type="StyleBox" uid="uid://dmnjoq44worp4" path="res://res/bg.tres" id="1_2uv1j"]
[ext_resource type="StyleBox" uid="uid://hmdo5aqfq0ve" path="res://res/slot_bg.tres" id="1_qjcbt"]
[ext_resource type="Script" path="res://script/scriptRoller.gd" id="2_c8qo1"]
[ext_resource type="Texture2D" uid="uid://crdx3qi22xj4k" path="res://res/pic/gui_icon/Enter.svg" id="4_dkf1m"]

[node name="ScriptRoller" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_2uv1j")
script = ExtResource("2_c8qo1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Roller" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
theme_override_styles/panel = ExtResource("1_qjcbt")

[node name="Scroll" type="ScrollContainer" parent="VBox/Roller"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBox/Roller/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="LineBox" type="VBoxContainer" parent="VBox/Roller/Scroll/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackgroundBtn" type="Button" parent="VBox/HBox"]
layout_mode = 2
text = "背景设置"

[node name="MusicBtn" type="Button" parent="VBox/HBox"]
layout_mode = 2
text = "音乐设置"

[node name="NarratorBtn" type="Button" parent="VBox/HBox"]
layout_mode = 2
text = "旁白设置"

[node name="Speaker" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_qjcbt")

[node name="MarginContainer" type="MarginContainer" parent="VBox/Speaker"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="VBox/Speaker/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/Speaker/MarginContainer/HBox"]
layout_mode = 2

[node name="Avatar" type="OptionButton" parent="VBox/Speaker/MarginContainer/HBox/VBoxContainer"]
layout_mode = 2
item_count = 1
selected = 0
allow_reselect = true
popup/item_0/text = "选择"
popup/item_0/id = 0

[node name="State" type="OptionButton" parent="VBox/Speaker/MarginContainer/HBox/VBoxContainer"]
layout_mode = 2
item_count = 1
selected = 0
allow_reselect = true
popup/item_0/text = "选择"
popup/item_0/id = 0

[node name="Button" type="Button" parent="VBox/Speaker/MarginContainer/HBox/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "上场"

[node name="Line" type="TextEdit" parent="VBox/Speaker/MarginContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "输入文本"
wrap_mode = 1

[node name="Submit" type="Button" parent="VBox/Speaker/MarginContainer/HBox"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 0
icon = ExtResource("4_dkf1m")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="VBox/HBox/BackgroundBtn" to="." method="add_background_setter"]
[connection signal="pressed" from="VBox/HBox/MusicBtn" to="." method="add_music_setter"]
[connection signal="pressed" from="VBox/HBox/NarratorBtn" to="." method="add_narrator_setter"]
[connection signal="item_selected" from="VBox/Speaker/MarginContainer/HBox/VBoxContainer/Avatar" to="." method="manual_select"]
[connection signal="toggled" from="VBox/Speaker/MarginContainer/HBox/VBoxContainer/Button" to="." method="set_button"]
